# gptBar

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs
src-tauri/src/agents/: base.rs  manager.rs  mod.rs  notification_agent.rs  refresh_agent.rs
src-tauri/src/auth/: cookie_extractor.rs  mod.rs  secure_store.rs
src-tauri/src/providers/: base.rs  claude.rs  codex.rs  gemini.rs  mod.rs  openai.rs
src-tauri/src/security/: dpapi.rs  mod.rs  sanitizer.rs  secure_string.rs
src/lib/: types.ts
src/lib/components/: ProviderCard.svelte  ProviderTabs.svelte  UsageBar.svelte
src/routes/: +page.svelte
